--- a/package.json
+++ b/package.json
@@ -71,7 +71,11 @@
     "coverageDirectory": "./coverage",
     "testEnvironment": "node",
     "roots": [
-      "<rootDir>/apps/"
-    ]
+      "<rootDir>/apps/",
+      "<rootDir>/libs/"
+    ],
+    "moduleNameMapper": {
+      "^@lib/providers(|/.*)$": "<rootDir>/libs/providers/src/$1"
+    }
   }
 }
