--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.2",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/microservices": "^9.4.2",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "@types/aws-sdk": "^2.7.0",
+    "@types/multer": "^1.4.7",
+    "aws-sdk": "^2.1386.0",
     "dotenv": "^16.0.3",
     "pg": "^8.11.0",
     "reflect-metadata": "^0.1.13",
