--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "@nestjs/typeorm": "^9.0.1",
     "@types/aws-sdk": "^2.7.0",
     "@types/multer": "^1.4.7",
+    "amqp-connection-manager": "^4.1.13",
+    "amqplib": "^0.10.3",
     "aws-sdk": "^2.1386.0",
     "dotenv": "^16.0.3",
     "pg": "^8.11.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0",
+    "rxjs": "^7.8.1",
     "typeorm": "^0.3.16"
   },
   "devDependencies": {
