--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "test:e2e": "jest --config ./apps/BurlaMask/test/jest-e2e.json"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^8.8.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.2",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/elasticsearch": "^9.0.0",
     "@nestjs/microservices": "^9.4.2",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
