--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
   },
   "dependencies": {
     "@elastic/elasticsearch": "^8.8.0",
+    "@nestjs/axios": "^2.0.0",
     "@nestjs/common": "^9.4.2",
     "@nestjs/config": "^2.3.2",
-    "@nestjs/core": "^9.0.0",
+    "@nestjs/core": "^9.4.2",
     "@nestjs/elasticsearch": "^9.0.0",
     "@nestjs/microservices": "^9.4.2",
     "@nestjs/platform-express": "^9.4.2",
@@ -33,8 +34,12 @@
     "amqp-connection-manager": "^4.1.13",
     "amqplib": "^0.10.3",
     "aws-sdk": "^2.1386.0",
+    "body-parser": "^1.20.2",
+    "canvas": "^2.11.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "face-api.js": "^0.22.2",
+    "fs-extra": "^11.1.1",
     "pg": "^8.11.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
